// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render 1`] = `
<DocumentFragment>
  <div
    data-testid="list"
  >
    <div>
      hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`render_child 1`] = `
<DocumentFragment>
  <div
    data-testid="child"
  >
    <div>
      homepage
    </div>
  </div>
</DocumentFragment>
`;

exports[`render_child 2`] = `
<DocumentFragment>
  <div
    data-testid="child"
  >
    <div>
      foo-bar
    </div>
  </div>
</DocumentFragment>
`;

exports[`render_initial 1`] = `
<DocumentFragment>
  <div
    data-testid="child"
  >
    <div>
      nested-foo-bar
    </div>
  </div>
</DocumentFragment>
`;

exports[`render_layout 1`] = `
<DocumentFragment>
  <div
    data-testid="child"
  >
    <div>
      layout-wrapper
      <div>
        <div>
          children
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`render_nested 1`] = `
<DocumentFragment>
  <div
    data-testid="child"
  >
    <div>
      not found
    </div>
  </div>
</DocumentFragment>
`;

exports[`render_nested 2`] = `
<DocumentFragment>
  <div
    data-testid="child"
  >
    <div>
      nested-foo-bar
    </div>
  </div>
</DocumentFragment>
`;

exports[`render_notfound 1`] = `
<DocumentFragment>
  <div
    data-testid="child"
  >
    <div>
      not found
    </div>
  </div>
</DocumentFragment>
`;

exports[`render_redirect 1`] = `
<DocumentFragment>
  <div
    data-testid="login"
  >
    <div>
      auth_login
    </div>
  </div>
</DocumentFragment>
`;
